kubernetes-manifest/blackbox-exporter-deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: blackbox-exporter
#   namespace: monitoring
#   labels:
#     app: blackbox-exporter
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: blackbox-exporter
#   template:
#     metadata:
#       labels:
#         app: blackbox-exporter
#     spec:
#       containers:
#       - name: blackbox-exporter
#         image: prom/blackbox-exporter:latest
#         ports:
#         - containerPort: 9115

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blackbox-exporter
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blackbox-exporter
  template:
    metadata:
      labels:
        app: blackbox-exporter
    spec:
      containers:
        - name: blackbox-exporter
          image: prom/blackbox-exporter:latest
          args:
            - "--config.file=/etc/blackbox-exporter/config.yml"
          ports:
            - containerPort: 9115
          volumeMounts:
            - name: config-volume
              mountPath: /etc/blackbox-exporter
      volumes:
        - name: config-volume
          configMap:
            name: blackbox-exporter-config
