kubernetes-manifest/blackbox-exporter-service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: blackbox-exporter
#   namespace: monitoring
#   labels:
#     app: blackbox-exporter
# spec:
#   ports:
#   - name: http
#     port: 9115
#     targetPort: 9115
#   selector:
#     app: blackbox-exporter
#   type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: blackbox-exporter
  namespace: monitoring
spec:
  selector:
    app: blackbox-exporter
  type: NodePort
  ports:
    - port: 9115
      targetPort: 9115
      nodePort: 30500
