kubernetes-manifest/service.yaml
# service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: polygon-rpc-app
  labels:
    job: python-api
    app: polygon-rpc-app
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 5001
      targetPort: 5001
  selector:
    app: polygon-rpc-app
